Swamy/07oct work (#49)
* Documentation changes

* Documentation Updates

* New Project

* Documentation

* Program and Documentation Updates

* Changes

* .NET 7 Project

* New Project

* Update Program.cs

* Program Updates

* Built In Data Types Demo

--- a/documentation/S4.md
+++ b/documentation/S4.md
@@ -1,12 +1,12 @@
 # Dive into JIT Compilation, Console Apps in .NET 6/7/8, Primitive Types, and Type Conversions - Part of Microservices Series 4/120
 
-## Date: 02-Oct-2023
+## Date: 09-Oct-2023
 
 ## Event URL: [https://www.meetup.com/dot-net-learners-house-hyderabad/events/295456925/](https://www.meetup.com/dot-net-learners-house-hyderabad/events/295456925/)
 
 ## YouTube URL: [https://www.youtube.com/watch?v=VxMY7FMm_JQ](https://www.youtube.com/watch?v=VxMY7FMm_JQ)
 
-![Viswanatha Swamy P K |150x150](./images/S3/ViswanathaSwamyPK.PNG)
+![Viswanatha Swamy P K |150x150](./images/S4/ViswanathaSwamyPK.PNG)
 
 ## Agenda for this session
 
@@ -37,6 +37,8 @@ The dotnet CLI tool utilizes the C# compiler, known as Roslyn, to transform your
 
 This two-step compilation process offers a significant advantage as it allows Microsoft to develop Common Language Runtimes (CLRs) for various operating systems, including Linux, macOS, and Windows. Thanks to the second compilation step, which generates code tailored to the native operating system and CPU instruction set, the same IL code functions seamlessly across all platforms. Irrespective of the programming language used for the source code, whether it's C#, Visual Basic, F#, etc., all .NET applications rely on IL code for their instructions, conveniently stored within an assembly. Microsoft and other entities also offer disassembler tools like the ILSpy .NET Decompiler extension, enabling you to open an assembly and uncover its IL code.
 ```
+
+![Compilation Process |150x150](./images/S4/CompilationProcess.PNG)
 
 **Reference(s):**
 
@@ -69,7 +71,13 @@ This two-step compilation process offers a significant advantage as it allows Mi
 
 ```powershell
 dotnet new console -o net6demoapp -f net6.0
+
+dotnet sln add .\net6demoapp\net6demoapp.csproj
+
+dotnet run --project .\net6demoapp\net6demoapp.csproj
 ```
+
+![.NET 6 App |150x150](./images/S4/net6demoapp.PNG)
 
 ### 3.2. Creating a Console Application with .NET 7
 
@@ -77,7 +85,13 @@ dotnet new console -o net6demoapp -f net6.0
 
 ```powershell
 dotnet new console -o net7demoapp -f net7.0
+
+dotnet sln add .\net7demoapp\net7demoapp.csproj
+
+dotnet run --project .\net7demoapp\net7demoapp.csproj
 ```
+
+![.NET 7 App |150x150](./images/S4/net7demoapp.PNG)
 
 ### 3.3. Creating a Console Application with .NET 8
 
@@ -85,42 +99,101 @@ dotnet new console -o net7demoapp -f net7.0
 
 ```powershell
 dotnet new console -o net8demoapp -f net8.0
+
+dotnet sln add .\net8demoapp\net8demoapp.csproj
+
+dotnet run --project .\net8demoapp\net8demoapp.csproj
 ```
+
+![.NET 8 App |150x150](./images/S4/net8demoapp.PNG)
 
 ## 4. Creating a Console Application with global.json inside folder
 
 > 1. Discussion and demo
 
+![Dotnet Sdks Version |150x150](./images/S4/DotnetSdks.PNG)
+
 ### 4.1. Creating a Console Application with .NET 6
 
 > 1. Discussion and demo
+> 1. Create a folder named `net6demoappv1`, change directory and open the folder in VS Code Terminal / Terminal
+> 1. Run the below commands
 
 ```powershell
 dotnet new globaljson --sdk-version 6.0.414
-dotnet new console -o net6demoappv1
+
+dotnet new console
+
+cd ..
+
+dotnet sln add .\net6demoappv1\net6demoappv1.csproj
+
+dotnet run --project .\net6demoappv1\net6demoappv1.csproj
 ```
+
+![.NET 6 App |150x150](./images/S4/net6demoappv1.PNG)
 
 ### 4.2. Creating a Console Application with .NET 7
 
 > 1. Discussion and demo
+> 1. Create a folder named `net7demoappv1`, change directory and open the folder in VS Code Terminal / Terminal
+> 1. Run the below commands
 
 ```powershell
 dotnet new globaljson --sdk-version 7.0.401
-dotnet new console -o net7demoappv1
+
+dotnet new console
+
+cd ..
+
+dotnet sln add .\net7demoappv1\net7demoappv1.csproj
+
+dotnet run --project .\net7demoappv1\net7demoappv1.csproj
 ```
+
+![.NET 7 App |150x150](./images/S4/net7demoappv1.PNG)
 
 ### 4.3. Creating a Console Application with .NET 8
 
 > 1. Discussion and demo
+> 1. Create a folder named `net8demoappv1`, change directory and open the folder in VS Code Terminal / Terminal
+> 1. Run the below commands
 
 ```powershell
-dotnet new globaljson --sdk-version 8.0.100
-dotnet new console -o net8demoappv1
+dotnet new globaljson --sdk-version 8.0.100-rc.1.23455.8
+
+dotnet new console
+
+cd ..
+
+dotnet sln add .\net8demoappv1\net8demoappv1.csproj
+
+dotnet run --project .\net8demoappv1\net8demoappv1.csproj
 ```
+
+![.NET 8 App |150x150](./images/S4/net8demoappv1.PNG)
 
 ## 5. Hands on with Basic / Primitive Types, and Constants
 
 > 1. Discussion and demo
+
+```powershell
+dotnet new console -o BuildInTypesDemo
+
+dotnet sln add .\BuildInTypesDemo\BuildInTypesDemo.csproj
+
+cd BuildInTypesDemo
+
+dotnet add reference ../../Common/HeaderFooter/HeaderFooter.csproj
+
+cd ..
+
+dotnet run --project .\BuildInTypesDemo\BuildInTypesDemo.csproj
+```
+
+![Build In Types Demo |150x150](./images/S4/BuildInTypesDemo.PNG)
+
+![Build In Types Demo |150x150](./images/S4/BuildInTypesDemo1.PNG)
 
 ## 6. Type Inference / Implicitly Typed Local Variables
 
