--- a/documentation/S4.md
+++ b/documentation/S4.md
@@ -195,6 +195,24 @@ dotnet run --project .\BuildInTypesDemo\BuildInTypesDemo.csproj
 
 > 1. Discussion and demo
 
+```powershell
+dotnet new console -o ImplicitlyTypedDemo
+
+dotnet sln add .\ImplicitlyTypedDemo\ImplicitlyTypedDemo.csproj
+
+cd ImplicitlyTypedDemo
+
+dotnet add reference ../../Common/HeaderFooter/HeaderFooter.csproj
+
+cd ..
+
+dotnet run --project .\ImplicitlyTypedDemo\ImplicitlyTypedDemo.csproj
+```
+
+![Implicitly Typed Demo |150x150](./images/S4/ImplicitlyTypedDemo.PNG)
+
+![Implicitly Typed Demo |150x150](./images/S4/ImplicitlyTypedDemo1.PNG)
+
 ## X. SUMMARY / RECAP / Q&A
 
 > 1. Discussion and Demo
