Swamy/08oct work (#50)
* Update S4.md

* Changes

* Added New Method

--- a/documentation/S4.md
+++ b/documentation/S4.md
@@ -30,13 +30,9 @@
 ## 1. Dive into understanding "JIT Compilation" Process
 
 > 1. Discussion and demo
+> 1. The dotnet CLI tool utilizes the C# compiler, known as Roslyn, to transform your C# source code into intermediate language (IL) code, which is then stored within an assembly, typically a DLL or EXE file. IL code statements closely resemble assembly language instructions and are designed to be executed by .NET's virtual machine, CoreCLR. During runtime, CoreCLR loads the IL code from the assembly, followed by the just-in-time (JIT) compiler converting it into native CPU instructions, which are subsequently executed by your machine's CPU.
+> 1. This two-step compilation process offers a significant advantage as it allows Microsoft to develop Common Language Runtimes (CLRs) for various operating systems, including Linux, macOS, and Windows. Thanks to the second compilation step, which generates code tailored to the native operating system and CPU instruction set, the same IL code functions seamlessly across all platforms. Irrespective of the programming language used for the source code, whether it's C#, Visual Basic, F#, etc., all .NET applications rely on IL code for their instructions, conveniently stored within an assembly. Microsoft and other entities also offer disassembler tools like the ILSpy .NET Decompiler extension, enabling you to open an assembly and uncover its IL code.
 > 1. **Pictures and demo script (To be added)**
-
-```text
-The dotnet CLI tool utilizes the C# compiler, known as Roslyn, to transform your C# source code into intermediate language (IL) code, which is then stored within an assembly, typically a DLL or EXE file. IL code statements closely resemble assembly language instructions and are designed to be executed by .NET's virtual machine, CoreCLR. During runtime, CoreCLR loads the IL code from the assembly, followed by the just-in-time (JIT) compiler converting it into native CPU instructions, which are subsequently executed by your machine's CPU.
-
-This two-step compilation process offers a significant advantage as it allows Microsoft to develop Common Language Runtimes (CLRs) for various operating systems, including Linux, macOS, and Windows. Thanks to the second compilation step, which generates code tailored to the native operating system and CPU instruction set, the same IL code functions seamlessly across all platforms. Irrespective of the programming language used for the source code, whether it's C#, Visual Basic, F#, etc., all .NET applications rely on IL code for their instructions, conveniently stored within an assembly. Microsoft and other entities also offer disassembler tools like the ILSpy .NET Decompiler extension, enabling you to open an assembly and uncover its IL code.
-```
 
 ![Compilation Process |150x150](./images/S4/CompilationProcess.PNG)
 
@@ -199,6 +195,24 @@ dotnet run --project .\BuildInTypesDemo\BuildInTypesDemo.csproj
 
 > 1. Discussion and demo
 
+```powershell
+dotnet new console -o ImplicitlyTypedDemo
+
+dotnet sln add .\ImplicitlyTypedDemo\ImplicitlyTypedDemo.csproj
+
+cd ImplicitlyTypedDemo
+
+dotnet add reference ../../Common/HeaderFooter/HeaderFooter.csproj
+
+cd ..
+
+dotnet run --project .\ImplicitlyTypedDemo\ImplicitlyTypedDemo.csproj
+```
+
+![Implicitly Typed Demo |150x150](./images/S4/ImplicitlyTypedDemo.PNG)
+
+![Implicitly Typed Demo |150x150](./images/S4/ImplicitlyTypedDemo1.PNG)
+
 ## X. SUMMARY / RECAP / Q&A
 
 > 1. Discussion and Demo
@@ -210,7 +224,7 @@ dotnet run --project .\BuildInTypesDemo\BuildInTypesDemo.csproj
 > 1. Basic DataTypes, Its Ranges, and Build in members
 > 1. DateTime, TimeSpan, and TimeZoneInfo
 > 1. String, StringBuilder, and String Interpolation
-> 1. Implicit and Explicit Conversions
+> 1. Implicit, Explicit Conversions and Parsing
 > 1. Boxing and Unboxing
 > 1. Parsing and Formatting
 > 1. SUMMARY / RECAP / Q&A
