--- a/documentation/S4.md
+++ b/documentation/S4.md
@@ -36,6 +36,8 @@
 
 ![Compilation Process |150x150](./images/S4/CompilationProcess.PNG)
 
+![JIT Compilation |150x150](./images/S4/JITCompilation.PNG)
+
 **Reference(s):**
 
 > 1. [https://en.wikipedia.org/wiki/Common_Language_Infrastructure#Implementations](https://en.wikipedia.org/wiki/Common_Language_Infrastructure#Implementations)
