--- a/documentation/S4.md
+++ b/documentation/S4.md
@@ -17,7 +17,7 @@
 > 1. Creating a Console Application with .NET (6/7/8)
 > 1. Creating a Console Application with global.json inside the folder
 > 1. Hands on with Basic / Primitive Types, and Constants
-> 1. Type Inference / Implicitly Typed Local Variables
+> 1. Type Inference / Implicitly Typed Local Variables, and Regions
 > 1. SUMMARY / RECAP / Q&A
 > 1. What is next ?
 
@@ -193,7 +193,7 @@ dotnet run --project .\BuildInTypesDemo\BuildInTypesDemo.csproj
 
 ![Build In Types Demo |150x150](./images/S4/BuildInTypesDemo1.PNG)
 
-## 6. Type Inference / Implicitly Typed Local Variables
+## 6. Type Inference / Implicitly Typed Local Variables, and Regions
 
 > 1. Discussion and demo
 
