--- a/documentation/S4.md
+++ b/documentation/S4.md
@@ -12,8 +12,10 @@
 
 > 1. Dive into "JIT Compilation" Process
 > 1. Importing Namespaces
->    - `Global namespace imports` feature
 >    - `File-scoped namespaces` feature
+>    - Using namespace imports feature
+>    - Globally importing namespaces
+>    - Implicitly importing namespaces
 > 1. Creating a Console Application with .NET (6/7/8)
 > 1. Creating a Console Application with global.json inside the folder
 > 1. Hands on with Basic / Primitive Types, and Constants
@@ -51,11 +53,19 @@
 
 > 1. Discussion and demo
 
-### 2.1. `Global namespace imports` feature
+### 2.1. `File-scoped namespaces` feature
 
 > 1. Discussion and demo
 
-### 2.2. `File-scoped namespaces` feature
+### 2.2. Using namespace imports feature
+
+> 1. Discussion and demo
+
+### 2.3. Globally importing namespaces
+
+> 1. Discussion and demo
+
+### 2.4. Implicitly importing namespaces
 
 > 1. Discussion and demo
 
