--- a/documentation/S4.md
+++ b/documentation/S4.md
@@ -11,7 +11,7 @@
 ## Agenda for this session
 
 > 1. Dive into "JIT Compilation" Process
-> 1. Importing Namespaces
+> 1. Namespaces, and Importing Namespaces
 >    - `File-scoped namespaces` feature
 >    - Using namespace imports feature
 >    - Globally importing namespaces
@@ -34,7 +34,6 @@
 > 1. Discussion and demo
 > 1. The dotnet CLI tool utilizes the C# compiler, known as Roslyn, to transform your C# source code into intermediate language (IL) code, which is then stored within an assembly, typically a DLL or EXE file. IL code statements closely resemble assembly language instructions and are designed to be executed by .NET's virtual machine, CoreCLR. During runtime, CoreCLR loads the IL code from the assembly, followed by the just-in-time (JIT) compiler converting it into native CPU instructions, which are subsequently executed by your machine's CPU.
 > 1. This two-step compilation process offers a significant advantage as it allows Microsoft to develop Common Language Runtimes (CLRs) for various operating systems, including Linux, macOS, and Windows. Thanks to the second compilation step, which generates code tailored to the native operating system and CPU instruction set, the same IL code functions seamlessly across all platforms. Irrespective of the programming language used for the source code, whether it's C#, Visual Basic, F#, etc., all .NET applications rely on IL code for their instructions, conveniently stored within an assembly. Microsoft and other entities also offer disassembler tools like the ILSpy .NET Decompiler extension, enabling you to open an assembly and uncover its IL code.
-> 1. **Pictures and demo script (To be added)**
 
 ![Compilation Process |150x150](./images/S4/CompilationProcess.PNG)
 
@@ -49,7 +48,7 @@
 > 1. [https://learn.microsoft.com/en-us/dotnet/api/system.int32?view=net-7.0](https://learn.microsoft.com/en-us/dotnet/api/system.int32?view=net-7.0)
 > 1. [https://en.wikipedia.org/wiki/Common_Language_Infrastructure#Implementations](https://en.wikipedia.org/wiki/Common_Language_Infrastructure#Implementations)
 
-## 2. Importing Namespaces
+## 2. Namespaces, and Importing Namespaces
 
 > 1. Discussion and demo
 
