--- a/documentation/S4.md
+++ b/documentation/S4.md
@@ -12,7 +12,7 @@
 
 > 1. Dive into "JIT Compilation" Process
 > 1. Namespaces, and Importing Namespaces
->    - `File-scoped namespaces` feature
+>    - `Block-Scoped, File-scoped` namespaces feature
 >    - Using namespace imports feature
 >    - Globally importing namespaces
 >    - Implicitly importing namespaces
@@ -52,7 +52,7 @@
 
 > 1. Discussion and demo
 
-### 2.1. `File-scoped namespaces` feature
+### 2.1. `Block-Scoped, File-scoped` namespaces feature
 
 > 1. Discussion and demo
 
