--- a/documentation/S4.md
+++ b/documentation/S4.md
@@ -11,13 +11,15 @@
 ## Agenda for this session
 
 > 1. Dive into "JIT Compilation" Process
-> 1. Importing Namespaces
->    - `Global namespace imports` feature
->    - `File-scoped namespaces` feature
+> 1. Namespaces, and Importing Namespaces
+>    - `Block-Scoped, File-scoped` namespaces feature
+>    - Using namespace imports feature
+>    - Globally importing namespaces
+>    - Implicitly importing namespaces
 > 1. Creating a Console Application with .NET (6/7/8)
 > 1. Creating a Console Application with global.json inside the folder
 > 1. Hands on with Basic / Primitive Types, and Constants
-> 1. Type Inference / Implicitly Typed Local Variables
+> 1. Type Inference / Implicitly Typed Local Variables, and Regions
 > 1. SUMMARY / RECAP / Q&A
 > 1. What is next ?
 
@@ -32,9 +34,10 @@
 > 1. Discussion and demo
 > 1. The dotnet CLI tool utilizes the C# compiler, known as Roslyn, to transform your C# source code into intermediate language (IL) code, which is then stored within an assembly, typically a DLL or EXE file. IL code statements closely resemble assembly language instructions and are designed to be executed by .NET's virtual machine, CoreCLR. During runtime, CoreCLR loads the IL code from the assembly, followed by the just-in-time (JIT) compiler converting it into native CPU instructions, which are subsequently executed by your machine's CPU.
 > 1. This two-step compilation process offers a significant advantage as it allows Microsoft to develop Common Language Runtimes (CLRs) for various operating systems, including Linux, macOS, and Windows. Thanks to the second compilation step, which generates code tailored to the native operating system and CPU instruction set, the same IL code functions seamlessly across all platforms. Irrespective of the programming language used for the source code, whether it's C#, Visual Basic, F#, etc., all .NET applications rely on IL code for their instructions, conveniently stored within an assembly. Microsoft and other entities also offer disassembler tools like the ILSpy .NET Decompiler extension, enabling you to open an assembly and uncover its IL code.
-> 1. **Pictures and demo script (To be added)**
 
 ![Compilation Process |150x150](./images/S4/CompilationProcess.PNG)
+
+![JIT Compilation |150x150](./images/S4/JITCompilation.PNG)
 
 **Reference(s):**
 
@@ -45,15 +48,23 @@
 > 1. [https://learn.microsoft.com/en-us/dotnet/api/system.int32?view=net-7.0](https://learn.microsoft.com/en-us/dotnet/api/system.int32?view=net-7.0)
 > 1. [https://en.wikipedia.org/wiki/Common_Language_Infrastructure#Implementations](https://en.wikipedia.org/wiki/Common_Language_Infrastructure#Implementations)
 
-## 2. Importing Namespaces
+## 2. Namespaces, and Importing Namespaces
 
 > 1. Discussion and demo
 
-### 2.1. `Global namespace imports` feature
+### 2.1. `Block-Scoped, File-scoped` namespaces feature
 
 > 1. Discussion and demo
 
-### 2.2. `File-scoped namespaces` feature
+### 2.2. Using namespace imports feature
+
+> 1. Discussion and demo
+
+### 2.3. Globally importing namespaces
+
+> 1. Discussion and demo
+
+### 2.4. Implicitly importing namespaces
 
 > 1. Discussion and demo
 
@@ -191,7 +202,7 @@ dotnet run --project .\BuildInTypesDemo\BuildInTypesDemo.csproj
 
 ![Build In Types Demo |150x150](./images/S4/BuildInTypesDemo1.PNG)
 
-## 6. Type Inference / Implicitly Typed Local Variables
+## 6. Type Inference / Implicitly Typed Local Variables, and Regions
 
 > 1. Discussion and demo
 
