--- a/documentation/S2.md
+++ b/documentation/S2.md
@@ -4,7 +4,7 @@
 
 ## Event URL: [https://www.meetup.com/dot-net-learners-house-hyderabad/events/294980994](https://www.meetup.com/dot-net-learners-house-hyderabad/events/294980994)
 
-## YouTube URL: [https://www.youtube.com/watch?v=VxMY7FMm_JQ](https://www.youtube.com/watch?v=VxMY7FMm_JQ)
+## YouTube URL: [https://www.youtube.com/watch?v=ON2PRrdjE6g](https://www.youtube.com/watch?v=ON2PRrdjE6g)
 
 ![Viswanatha Swamy P K |150x150](./images/S2/ViswanathaSwamyPK.PNG)
 
