--- a/documentation/S4.md
+++ b/documentation/S4.md
@@ -232,6 +232,7 @@ dotnet run --project .\ImplicitlyTypedDemo\ImplicitlyTypedDemo.csproj
 
 ## X. What is next ?
 
+> 1. Global Using, Implicit Usings
 > 1. Basic DataTypes, Its Ranges, and Build in members
 > 1. DateTime, TimeSpan, and TimeZoneInfo
 > 1. String, StringBuilder, and String Interpolation
